<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">street</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="loading">正在加载...</string>
    <string name="menu_notification">半场提醒</string>
    <string name="menu_refresh">刷新</string>
    <string name="menu_more">更多</string>
    <string name="not_logedin">未登录</string>
    <string name="username">用户名</string>
    <string name="username_hint">请输入用户名</string>
    <string name="password">密码</string>
    <string name="password_hint">请输入密码</string>
    <string name="login">登陆</string>
    <string name="input_title">请输入标题</string>
    <string name="input_content">请输入内容</string>
    <string name="notification_logout">退出</string>
    <string name="post_send">发送帖子</string>
    <string name="counter_cancel">取消</string>
    <string name="counter_enter">跳转</string>
    <string name="counter_end">末页</string>

</resources>
