<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item 
        android:icon="@drawable/action_notification" 
        android:id="@+id/notification" 
        android:visible="true" 
        android:title="@string/menu_notification" 
        android:titleCondensed="@string/menu_notification" 
        android:showAsAction="always" />
    <item 
        android:icon="@drawable/action_refresh" 
        android:id="@+id/menu_refresh" 
        android:visible="true" 
        android:title="@string/menu_refresh" 
        android:titleCondensed="@string/menu_refresh" 
        android:showAsAction="always" />
    <item 
        android:icon="@drawable/action_more" 
        android:id="@+id/menu_more" 
        android:visible="true" 
        android:title="@string/menu_more" 
        android:titleCondensed="@+string/zen_more" 
        android:showAsAction="always">
    </item>
</menu>