<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent" >
   	        
	<RelativeLayout
		android:id="@+id/counter_bg"
		android:layout_width="match_parent"
		android:layout_height="80dp"
		android:layout_alignParentBottom="true"
		android:background="@android:color/white" >
  
	    <LinearLayout 
		     android:id="@+id/counter"
		     android:layout_width="match_parent"
		     android:layout_height="80dp"
		     android:background="#99d9d9d9"
		     android:gravity="center"
		     android:orientation="vertical">

	       	<RelativeLayout
                android:id="@+id/btn_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingBottom="4dp"
                android:paddingTop="4dp" >		    
	            <Button
	                android:id="@+id/counter_cancel"
	                android:layout_width="48dp"
	                android:layout_height="30dp"
	                android:layout_alignParentLeft="true"
	                android:layout_marginLeft="10dp"
	                android:background="@drawable/red_btn"
	                android:gravity="center"
	                android:text="@string/counter_cancel"
	                android:textColor="#fff"
	                android:textSize="15sp" />
	            
	            <Button
	                android:id="@+id/counter_end"
	                android:layout_width="48dp"
	                android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
	                android:background="@drawable/purple_btn"
	                android:gravity="center"
	                android:text="@string/counter_end"
	                android:textColor="#fff"
	                android:textSize="15sp" />
	            
	            <Button
	                android:id="@+id/counter_enter"
	                android:layout_width="48dp"
	                android:layout_height="30dp"
	                android:layout_alignParentRight="true"
	                android:layout_marginRight="10dp"
	                android:background="@drawable/blue_btn"
	                android:gravity="center"
	                android:text="@string/counter_enter"
	                android:textColor="#fff"
	                android:textSize="15sp" />
 			</RelativeLayout>
 			           
	        <EditText 
				android:id="@+id/counter_num"
		        android:layout_width="180dp"
		        android:layout_height="wrap_content"
		        android:padding="6dp"
		        android:hint="请输入页码"
		        android:textSize="18sp"
		        android:background="@drawable/edittext_bg_focused"
		        android:imeOptions="actionNone"
		        android:numeric="integer" 
		        android:singleLine="true" />
	
	    </LinearLayout>
	</RelativeLayout>
</RelativeLayout>